Style instructions section. Fix overflow with instructions section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,9 @@ body {
     display: flex;
     flex-direction: column;
     background: url("../images/johny-goerend-Oz2ZQ2j8We8-unsplash.webp") no-repeat center /cover;
-    /* height: 100vh; */
+    min-height: 100vh;
+    overflow: hidden;
+    
 }
 
 h1,
@@ -99,6 +101,7 @@ h5 {
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: space-around;
+    padding-bottom: 20px;
 }
 
 #computer-choice {
@@ -208,13 +211,17 @@ h5 {
     position: absolute;
     top: 100px;
     left: -10px;
-    height: auto;
+    /* height: auto; */
     margin: 15px 15px;
+    
+    
 }
 
 #instructions div {
     padding: 0 10px 30px 20px;
     font-size: 1rem;
+    max-height: 350px;
+    overflow-y: scroll;
 }
 
 #instructions h2 {
@@ -308,6 +315,16 @@ h5 {
 
     }
 
+    /* Instruction section */
+    #instructions {
+        width: 65%;
+        left: 130px;
+    }
+
+    #instructions div {
+        max-height: 500px;
+    }
+
 }
 
 @media screen and (min-width: 1050px) {
@@ -317,6 +334,29 @@ h5 {
         background-position: bottom;
     }
 
+    /* Instruction section */
+    #instructions {
+        /* font-size: 2.5rem; */
+        width: 60%;
+        left: 220px;
+    }
+
+    #instructions li {
+        padding-top: 10px;
+        padding-left: 20px;
+        font-size: 1.2rem;
+        margin-left: 20px;
+    }
+
+    #instructions div {
+        padding: 0 10px 30px 20px;
+        font-size: 1.6rem;
+        max-height: 700px;
+    }
+
+    #instructions p {
+        font-size: 1.2rem;
+    }
     
 
 }
@@ -358,6 +398,28 @@ h5 {
         justify-content: space-evenly;
     }
 
+    /* Instruction section */
+    #instructions {
+        /* font-size: 2.5rem; */
+        width: 50%;
+        left: 450px;
+    }
+
+    #instructions li {
+        padding-top: 10px;
+        padding-left: 20px;
+        font-size: 1.4rem;
+        margin-left: 20px;
+    }
+
+    #instructions div {
+        padding: 0 10px 30px 20px;
+        font-size: 1.8rem;
+    }
+
+    #instructions p {
+        font-size: 1.4rem;
+    }
     
 
 
